CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(TiandituDowunloader)
SET(CMAKE_CXX_STANDARD 17)

ADD_DEFINITIONS(-DELPP_THREAd_SAFE)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

FILE(COPY config.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

AUX_SOURCE_DIRECTORY(src SRC)
ADD_EXECUTABLE(${PROJECT_NAME} main.cpp ${SRC})